
* Allow custom headers in [get-url].

* Add more unit tests.

* Make HTTP response codes more relevant.

* Improvements to [child-process] usertag.

* Allow setting cookies, even if no session is created.

* Add new global directive LogTimeFormat which allows customizing the prefix of
  log lines from the default [%d/%B/%Y:%H:%M:%S %z] using strftime(3) format.


Payments
--------

* Add BIN-2 MasterCard number support to Vend::Order, catalog templates,
  admin, and Vend::Payment modules which require it.

* Include b_phone and phone in payment information.

* Remove defunct payment services: Vend::Payment::ECHO and Vend::Payment::Skipjack.

* Updated Vend::Payment::PayPal to latest available version.

* New Braintree payment module.

* Add Gateway Log feature for logging full details of payment gateway requests/
  responses. (See extended section about the Gateway Log later in this document.)


Database
--------

* Support newer versions of MySQL.

* Prevent key-only inserts for new rows in [import-fields] tag.

* Allow admin user to export specific tables using [backup-database] despite
  current NoExportExternal setting.

* Add ability to have a NO_UPDATE field in SQL tables, which field will
  not affect a TIMESTAMP field (in MySQL or Postgres, at least).

  Intended to allow mod_time in user logins to be updated without changing
  a timestamp field. May have other uses, but is only honored at this
  time in the set_field() method, so has limited applicability.

  Assuming one has a timestamp field in the userdb table called
  "update_date", this is effected by changing the configuration as:

    Database userdb  TIMESTAMP_FIELD  update_date
    Database userdb  NO_UPDATE        mod_time

* Fix bugs with MySQL and PostgreSQL handling of QUOTE_IDENTIFIERS.

* Update default field widths for userdb, transactions, and orderlines.

* Improve error handling/messaging when no access to database in Safe.
